<resources>
    <string name="app_name">Vôos Brasil</string>

    <!--Home-->
    <string name="source">IATA Origem</string>
    <string name="destination">IATA Destino</string>
    <string name="departure_date">Data da ida</string>
    <string name="arrival_date">Data da volta</string>
    <string name="adults">Quantidade de passageiros</string>
    <string name="search_flights">Pesquisar passagem</string>

    <!-- Search-->
    <string name="title_search_activity">PESQUISAR PASSAGEM</string>
    <string name="airline">Cia Aérea</string>
    <string name="departure">Partida</string>
    <string name="duration">Duração</string>
    <string name="arrival">Chegada</string>
    <string name="outward_trip">Ida</string>
    <string name="return_trip">Volta</string>
    <string name="no_stops">voo direto</string>
    <string name="buy">Comprar R$ %.2f</string>
    <string name="filter">Filtrar</string>
    <string name="sort">Ordenar</string>

    <plurals name="stops">
        <item quantity="one">1 parada</item>
        <item quantity="other">%d paradas</item>
    </plurals>

    <string name="title_filter_dialog">Selecione a companhia aérea</string>
    <string name="all">Todas</string>
    <string name="gol">Gol</string>
    <string name="azul">Azul</string>
    <string name="latam">Latam</string>
    <string name="cancel">Cancelar</string>
</resources>