<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="net.anapsil.voosbrasil.ui.viewmodels.SearchViewModel"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <TextView
                    style="@style/VoosBrasilTheme.TextAppearance.Bold.White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_search_activity"/>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/cool_grey"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    style="@style/Widget_CardTitle"
                    android:text="@string/airline"/>

                <TextView
                    style="@style/Widget_CardTitle"
                    android:text="@string/departure"/>

                <TextView
                    style="@style/Widget_CardTitle"
                    android:text="@string/duration"/>

                <TextView
                    style="@style/Widget_CardTitle"
                    android:text="@string/arrival"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/flights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/item_flight"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/filter"
                    style="@style/Widget_ButtonWhite"
                    android:text="@string/filter"
                    android:drawableStart="@drawable/ic_filter"/>

                <Button
                    android:id="@+id/sort"
                    style="@style/Widget_ButtonWhite"
                    android:onClick="@{vm::onSortClick}"
                    android:text="@string/sort"
                    android:drawableStart="@drawable/ic_sort"/>
            </LinearLayout>
        </FrameLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>