<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="net.anapsil.voosbrasil.ui.viewmodels.HomeViewModel"/>

        <import type="android.view.View"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:background="@color/colorPrimary"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:importantForAccessibility="no"
                android:src="@drawable/logo"/>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/home_margin_vertical"
            android:layout_marginEnd="@dimen/home_margin_horizontal"
            android:layout_marginStart="@dimen/home_margin_horizontal"
            android:layout_marginTop="@dimen/home_margin_vertical"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_form_view_height"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/source"
                    style="@style/Widget_EditText"
                    android:background="@drawable/bg_spinner_pin"
                    android:dropDownAnchor="@id/source"
                    android:hint="@string/source"
                    android:imeOptions="actionNext"
                    app:binding="@{vm.source}"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_form_view_height"
                android:layout_marginTop="@dimen/home_margin_vertical"
                app:cardUseCompatPadding="true">

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/destination"
                    style="@style/Widget_EditText"
                    android:background="@drawable/bg_spinner_pin"
                    android:dropDownAnchor="@id/destination"
                    android:hint="@string/destination"
                    android:imeOptions="actionNext"
                    app:binding="@{vm.destination}"/>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_margin_vertical"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/home_form_view_height"
                    android:layout_marginEnd="7dp"
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/departure_date"
                        style="@style/Widget_TextViewForm"
                        android:background="@drawable/bg_spinner_calendar"
                        android:onClick="@{vm::onDepartureClick}"
                        app:binding="@{vm.departure}"
                        tools:text="@string/departure_date"/>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/home_form_view_height"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/arrival_date"
                        style="@style/Widget_TextViewForm"
                        android:background="@drawable/bg_spinner_calendar"
                        android:onClick="@{vm::onArrivalClick}"
                        app:binding="@{vm.arrival}"
                        tools:text="@string/arrival_date"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_form_view_height"
                android:layout_marginTop="@dimen/home_margin_vertical"
                app:cardUseCompatPadding="true">

                <EditText
                    android:id="@+id/adults"
                    style="@style/Widget_EditText"
                    android:background="@drawable/bg_spinner_people"
                    android:hint="@string/adults"
                    android:inputType="number"
                    android:maxLength="1"
                    app:binding="@{vm.adults}"/>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/search"
                style="@style/Widget_ButtonGreen"
                android:layout_height="54dp"
                android:layout_marginTop="@dimen/home_margin_vertical"
                android:drawableStart="@drawable/ic_search"
                android:onClick="@{vm::onSearchClick}"
                android:text="@string/search_flights"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/overlay"
            android:clickable="true"
            android:focusable="true"
            android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </FrameLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>